Fixing up background image not displaying on mobile devices

--- a/fallstack19/assets/css/main.css
+++ b/fallstack19/assets/css/main.css
@@ -3174,7 +3174,7 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				background-image: url("images/top-1280.svg"), url("images/overlay.png"), url("../../images/header.jpg");
+				background-image: url("images/top-1280.svg"), url(""), url("../../images/headerbg.png");
 				background-size: 1280px 184px,						auto,							cover;
 				padding: 3em 0 7em 0;
 			}
